make sure image width can't overflow screen

--- a/css/main.css
+++ b/css/main.css
@@ -51,9 +51,14 @@ li {
   padding-left: 10px;
 }
 
+p {
+  max-width: 100%;
+}
+
 img {
   margin-left: auto;
   margin-right: auto;
+  max-width: 100%;
   display: block;
 }
 
